--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">  
     <link rel="stylesheet" href="./assets/style.css">
+    <title>Code Quiz</title>
+
 </head>
 <body>
-    
+
+    <div class="row">
+        <header class="p-3 col-12">
+            <h1 class="text-center text-primary">Coding Quiz Challenge</h1>
+
+            <p class="p-3 text-center col-md-6 offset-md-3 d-flex flex-column text-primary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam expedita atque voluptatibus nostrum consequuntur est repudiandae assumenda iusto delectus aut! Similique, sed et? Quis nihil quibusdam dicta nesciunt placeat dolorum?</p>
+        </header>
+    </div>
+
+    <main class="text-center col-md-6 offset-md-3 d-flex flex-column">
+        <button id="start-quiz" class="btn btn-secondary">Start Quiz!</button>
+    </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
