--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">  
     <link rel="stylesheet" href="./assets/style.css">
     <title>Code Quiz</title>
 
@@ -21,11 +20,23 @@
     </div>
 
     <main class="text-center col-md-6 offset-md-3 d-flex flex-column">
-        <button id="start-quiz" class="btn btn-secondary">Start Quiz!</button>
+        <button id="startQuiz" class="btn btn-secondary">Start Quiz!</button>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  
+    <div id="timer">
+
+    </div>
+
+    <div id="questionsContainer">
+        <p id="question">
+
+        </p>
+            <div id="answers">
+                
+            </div>
+
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/script.js"></script>
