--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
 
-    <div class="row">
-        <header class="p-3 col-12">
-            <h1 class="text-center text-primary">Coding Quiz Challenge</h1>
 
-            <p class="p-3 text-center col-md-6 offset-md-3 d-flex flex-column text-primary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam expedita atque voluptatibus nostrum consequuntur est repudiandae assumenda iusto delectus aut! Similique, sed et? Quis nihil quibusdam dicta nesciunt placeat dolorum?</p>
-        </header>
-    </div>
+    <header>
+        <h1>Coding Quiz Challenge</h1>
 
-    <main class="text-center col-md-6 offset-md-3 d-flex flex-column">
-        <button id="startQuiz" class="btn btn-secondary">Start Quiz!</button>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam expedita atque voluptatibus nostrum consequuntur est repudiandae assumenda iusto delectus aut! Similique, sed et? Quis nihil quibusdam dicta nesciunt placeat dolorum?</p>
+    </header>
+    
+
+    <main>
+        <button id="startQuiz" type="submit">Start Quiz!</button>
     </main>
 
     <div id="timer">
